Project

General

Profile

Actions

Bug #15558

closed

Should Exception#exception copy the backtrace?

Bug #15558: Should Exception#exception copy the backtrace?

Added by Eregon (Benoit Daloze) over 7 years ago. Updated about 7 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.6.0p0 (2018-12-25 revision 66547) [x86_64-linux]
[ruby-core:91232]

Description

Currently it does not on MRI:

ruby -e 'begin raise "foo"; rescue => e; c=e.exception "bar"; p c.backtrace; end'
nil

But it does on JRuby 9.2.5.0 and TruffleRuby 1.0.0-rc11:

truffleruby -e 'begin raise "foo"; rescue => e; c=e.exception "bar"; p e.backtrace; end'
["-e:1:in `<main>'"]

This means in some cases, code needs about this difference such as in
https://github.com/asciidoctor/asciidoctor/blob/41da20a47a8da96966ef3ec1c2f509e07e7920e3/lib/asciidoctor.rb#L1322-L1338
More context in:
https://github.com/oracle/truffleruby/issues/1542#issuecomment-456850066

Updated by Eregon (Benoit Daloze) over 7 years ago Actions #1 [ruby-core:91951]

@nobu (Nobuyoshi Nakada) and other MRI committers: what do you think?

It's somewhat inconsistent with Exception#clone which does copy the backtrace.

Would it make sense to follow JRuby and TruffleRuby's behavior, by copying the backtrace too, here?

Updated by Eregon (Benoit Daloze) over 7 years ago Actions #2 [ruby-core:91960]

BTW, MRuby 2.0.0 also copies the backtrace (because it implements Exception#exception as clone + setting the message):

$ mruby -e 'begin raise "foo"; rescue => e; c=e.exception "bar"; p c.backtrace; end'          
["-e:1"]

MRI also clones (with rb_obj_clone), but exc_init resets the backtrace to nil.
So should exc_exception() just call rb_ivar_set(exc, id_mesg, argv[0]); instead of exc_initialize (which kind of initializes the object twice)?

Updated by Eregon (Benoit Daloze) over 7 years ago Actions #3 [ruby-core:92955]

I plan to fix this and copy the backtrace too in MRI, because it looks not intentional and inconsistent.
Anyone against?

Updated by Eregon (Benoit Daloze) over 7 years ago Actions #4 [ruby-core:92988]

  • Assignee set to Eregon (Benoit Daloze)

Updated by ko1 (Koichi Sasada) about 7 years ago Actions #5 [ruby-core:93982]

I'm not sure the intention, but

Japanese document shows how to use it:

# http://rurema.clear-code.com/2.6.0/method/Exception/i/exception.html
begin
 ...        # do something
rescue => e
 raise e.exception("an error occurs during hogehoge process")  # detailed message
end

If this method is intended to be raised immediately, the empty backtrace is reasonable.

Updated by nobu (Nobuyoshi Nakada) about 7 years ago Actions #6

  • Status changed from Open to Closed
Actions

Also available in: PDF Atom