Do not clear backtrace in Exception#exception

[Bug #15558]